prevent images from stretching

--- a/style.css
+++ b/style.css
@@ -2,13 +2,20 @@
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-#container {
+.flex {
   display: flex;
+}
+.flex-column {
   flex-direction: column;
+}
+.align-center {
   align-items: center;
 }
+.justify-space-around {
+  justify-content: space-around;
+}
 
-img {
+.img-button {
   background-color: #eeeeee;
   border-radius: 10px;
   margin: 10px;
@@ -16,8 +23,13 @@ img {
   width: 200px;
 }
 
-img:hover {
+.img-button:hover {
   cursor: pointer;
+  background-color: #dddddd;
+}
+
+img {
+  height: 200px;
 }
 
 .ineligible {
